--- a/views/template.html
+++ b/views/template.html
@@ -12,8 +12,9 @@
     <body>
         <nav class="main-menu" style="text-align: center;">
             <a href="/users/logout">Log Out</a>
-            <a href="/users/login">Login</a>
+            <a href="/">Login</a>
             <a href="/signup">Sign Up</a>
+            <a href="/wine">Wine List</a>
         </nav>
         <h1 class="container">${title}</h1>
         <main class="container">${partial}</main>
