--- a/views/template.html
+++ b/views/template.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <nav class="main-menu" style="text-align: center;">
-            <a href="/users/logout">Log Out</a>
-            <a href="/users/login">Login</a>
+            <a href="/logout">Log Out</a>
+            <a href="/">Login</a>
             <a href="/signup">Sign Up</a>
         </nav>
         <h1 class="container">${title}</h1>
