--- a/views/partial-login.html
+++ b/views/partial-login.html
@@ -1,9 +1,9 @@
 <form action="/" method="POST">
     <label>Email Address
-        <input type="text" aria-placeholder="Email Address" name="email_address">
+        <input type="text" aria-placeholder="Email Address" name="email">
     </label>
     <label>Password
-        <input type="text" aria-placeholder="Password" name="password">
+        <input type="password" aria-placeholder="Password" name="password">
     </label>
     <button type="submit">Login</button>
 </form>
