--- a/views/template.html
+++ b/views/template.html
@@ -14,7 +14,7 @@
             <a href="/logout">Log Out</a>
             <a href="/">Login</a>
             <a href="/signup">Sign Up</a>
-            <a href="/wine">Wine List</a>
+            <a href="/masterList">Wine List</a>
         </nav>
         <h1 class="container">${title}</h1>
         <main class="container">${partial}</main>
