--- a/views/template.html
+++ b/views/template.html
@@ -15,6 +15,7 @@
             <a href="/">Login</a>
             <a href="/signup">Sign Up</a>
             <a href="/masterList">Wine List</a>
+            <a href="/buyerList/">My List</a>
         </nav>
         <h1 class="container">${title}</h1>
         <main class="container">${partial}</main>
