--- a/views/partial-buyerList.html
+++ b/views/partial-buyerList.html
@@ -1,7 +1,22 @@
-<p>Hello Test</p>
-<ul>
-    ${userListData.map(buyer => `
-        <li>${buyer.varietals}</li>
-        `).join('')
-    }
-</ul>
+<table class="table">
+        <thead>
+            <tr>
+                <th>Producer</th>
+                <th>Varietals</th>
+                <th>Region</th>
+                <th>Country</th>
+                <th>Vintage</th>
+            </tr>
+        </thead>
+        <tbody>
+        ${userListData.map(buyer => `
+            <tr>
+                <td>${buyer.producer}</td> 
+                <td>${buyer.varietals}</td> 
+                <td>${buyer.region}</td> 
+                <td>${buyer.country}</td> 
+                <td>${buyer.year}</td>
+            </tr>
+        `).join('')}
+        </tbody>
+    </table>
