--- a/views/template.html
+++ b/views/template.html
@@ -7,15 +7,18 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-        <link rel="stylesheet" href="./stylesheets/style.css">
+        <link rel="stylesheet" href="/public/stylesheets/style.css">
     </head>
     <body>
         <nav class="main-menu" style="text-align: center;">
+                ${!!is_logged_in ? `
             <a href="/logout">Log Out</a>
+            <a href="/masterList">Wine List</a>
+            <a href="/buyerList/${id}">My List</a>
+            ` : `
             <a href="/">Login</a>
             <a href="/signup">Sign Up</a>
-            <a href="/masterList">Wine List</a>
-            <a href="/buyerList/">My List</a>
+            `}
         </nav>
         <h1 class="container">${title}</h1>
         <main class="container">${partial}</main>
