Allows user to choose a role from sign-up dropDown

--- a/views/partial-signup.html
+++ b/views/partial-signup.html
@@ -22,10 +22,11 @@
         Password
     <input type="password" aria-placeholder="Password" name="password">
     </label>
-    <select>
-            <option value="Rep">Rep</option>
-            <option value="Buyer">Buyer</option>
-    </select>
+      <input type = "text" list = "role" name="role" placeholder="Rep or Buyer?"> 
+      <datalist id = "role">
+        <option value = "rep">
+        <option value = "buyer">
+      </datalist>
 
     <button type="submit">Submit</button>
 </form>
