--- a/views/partial-rep.html
+++ b/views/partial-rep.html
@@ -8,7 +8,9 @@
     <tbody>
         ${userData.map(user => `
             <tr>
-                <td>${user.first_name} ${user.last_name}</td>
+                <td><a href="./rep/${user.id}">${user.first_name} ${user.last_name}</a>
+                    
+                </td>
                 <td>${user.company}</td>
             </tr>
             `).join('')}
