navbar and background image

--- a/views/partial-login.html
+++ b/views/partial-login.html
@@ -1,3 +1,10 @@
+<style>
+html {
+     background: url("./images/daniel-vogel-NUD6cWNdBv8-unsplash.jpg");
+
+}
+</style>
+     
 <form action="/" method="POST">
     <label>Email Address
         <input type="text" aria-placeholder="Email Address" name="email">
