Added list type column and function:

--- a/views/partial-masterList.html
+++ b/views/partial-masterList.html
@@ -19,9 +19,13 @@
                     <td>${wine.region}</td> 
                     <td>${wine.country}</td> 
                     <td>${wine.year}</td>
-                    <td><input type="submit" value="Add Wine" name="add"></input></td>
+                    <td><input type = "text" list = "list_type" name="list_type" placeholder="Add or Need"> 
+                        <datalist id = "list_type">
+                          <option value = "Have">
+                          <option value = "Need">
+                        </datalist></td>
+                        <td><input type="submit" value="Add Wine" name="add"></input></td>
                 </form>
-                
             </tr>
         `).join('')}
         </tbody>
