Filtered arrays for buyer list and single buyer view

--- a/views/partial-buyerList.html
+++ b/views/partial-buyerList.html
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-        ${userListData.map(buyer => `
+        ${haveData.map(buyer => `
             <tr>
                 <td>${buyer.producer}</td> 
                 <td>${buyer.varietals}</td> 
@@ -34,7 +34,7 @@
             </tr>
         </thead>
         <tbody>
-        ${userListData.map(buyer => `
+        ${needData.map(buyer => `
             <tr>
                 <td>${buyer.producer}</td> 
                 <td>${buyer.varietals}</td> 
