--- a/views/partial-single-userList.html
+++ b/views/partial-single-userList.html
@@ -10,13 +10,37 @@
         </tr>
     </thead>
     <tbody>
-    ${userListData.map(wine => `
+    ${haveData.map(buyer => `
         <tr>
-                <td>${wine.producer}</td> 
-                <td>${wine.varietals}</td> 
-                <td>${wine.region}</td> 
-                <td>${wine.country}</td> 
-                <td>${wine.year}</td>            
+            <td>${buyer.producer}</td> 
+            <td>${buyer.varietals}</td> 
+            <td>${buyer.region}</td> 
+            <td>${buyer.country}</td> 
+            <td>${buyer.year}</td>
+        </tr>
+    `).join('')}
+    </tbody>
+</table>
+
+<h2>Needed Wines</h2>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Producer</th>
+            <th>Varietals</th>
+            <th>Region</th>
+            <th>Country</th>
+            <th>Vintage</th>
+        </tr>
+    </thead>
+    <tbody>
+    ${needData.map(buyer => `
+        <tr>
+            <td>${buyer.producer}</td> 
+            <td>${buyer.varietals}</td> 
+            <td>${buyer.region}</td> 
+            <td>${buyer.country}</td> 
+            <td>${buyer.year}</td>
         </tr>
     `).join('')}
     </tbody>
