Headers for Buyer Lists

--- a/views/partial-buyerList.html
+++ b/views/partial-buyerList.html
@@ -1,4 +1,5 @@
 
+<h2>INVENTORY</h2>
 <table class="table">
         <thead>
             <tr>
@@ -22,7 +23,7 @@
         </tbody>
     </table>
 
-<h2>Needed Wines</h2>
+<h2>LOOKING FOR</h2>
     <table class="table">
         <thead>
             <tr>
