--- a/views/partial-single-userList.html
+++ b/views/partial-single-userList.html
@@ -1,4 +1,4 @@
-
+<h2>INVENTORY</h2>
 <table class="table">
     <thead>
         <tr>
@@ -22,7 +22,7 @@
     </tbody>
 </table>
 
-<h2>Needed Wines</h2>
+<h2>Looking For</h2>
 <table class="table">
     <thead>
         <tr>
