--- a/views/partial-buyerList.html
+++ b/views/partial-buyerList.html
@@ -1,5 +1,6 @@
 
 <h2>INVENTORY</h2>
+<div class="page-body">
 <table class="table">
         <thead>
             <tr>
@@ -46,3 +47,4 @@
         `).join('')}
         </tbody>
     </table>
+</div>
