--- a/views/partial-signup.html
+++ b/views/partial-signup.html
@@ -1,4 +1,4 @@
-<form action='/signup' method='POST'>
+<form action='/signup' method='POST' class="signup">
     <label> First Name 
         <input type="text" aria-placeholder="First Name" name="first_name">
     </label>
