--- a/views/partial-buyerList.html
+++ b/views/partial-buyerList.html
@@ -2,7 +2,7 @@
 <p>&nbsp;</p>
 <h2>INVENTORY</h2>
 <div class="page-body">
-<table class="table">
+<table class="table is-hoverable">
         <thead>
             <tr>
                 <th>Producer</th>
