--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,15 +16,25 @@ a {
   color: #00B7FF;
 }
 
+h2 {
+  font-size: 40px; 
+  display:flex; 
+  align-items: center; 
+}
+
 .table {
   background-color: transparent;
-  font-size: 18px; 
-  color: rgb(179, 176, 190);
+  font-size: 24px; 
+  color: rgb(139, 138, 143);
 }
 
 .table thead th { 
   color:rgb(179, 176, 190);
-  font-size: 24px; 
+  font-size: 40px; 
+}
+
+tr:hover {
+  background-color:rgb(14,0,4); 
 }
 
 .navbar {
@@ -37,4 +47,9 @@ a {
   justify-content: center;
   align-items: center; 
   padding: 20px; 
+}
+
+.signupBTN { 
+  padding: 5px; 
+  border-radius: 10%;
 }
