--- a/views/partial-signup.html
+++ b/views/partial-signup.html
@@ -1,4 +1,7 @@
-<form action='/signup' method='POST' class="signup">
+<h2> SIGN UP FORM </h2>
+
+<div class="signup">
+<form action='/signup' method='POST'>
     <label> First Name 
         <input type="text" aria-placeholder="First Name" name="first_name">
     </label>
@@ -29,5 +32,6 @@
         </select>
     </label>
 
-    <button type="submit">Submit</button>
+    <button class="signupBTN" type="submit">Submit</button>
 </form>
+</div>
