--- a/views/partial-login.html
+++ b/views/partial-login.html
@@ -4,12 +4,14 @@ html {
 
 }
 </style>
-     
-<form action="/" method="POST">
-    <label>Email Address
+
+<h1 class="login-title">LOGIN</h1>
+<p>&nbsp;</p>
+<form class="login-form" action="/" method="POST">
+    <label class="input-login">Email Address
         <input type="text" aria-placeholder="Email Address" name="email">
     </label>
-    <label>Password
+    <label class="input-login">Password
         <input type="password" aria-placeholder="Password" name="password">
     </label>
     <button type="submit">Login</button>
