--- a/views/template.html
+++ b/views/template.html
@@ -8,8 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
         <link rel="stylesheet" href="../stylesheets/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">    </head>
     <body>
         
 <html class="has-navbar-fixed-top">
@@ -87,7 +86,6 @@
   </div>
 </nav>
 
-        <h1 class="container">${title}</h1>
         <main class="container">${partial}</main>
     </body>
 </html>
