--- a/views/partial-login.html
+++ b/views/partial-login.html
@@ -1,3 +1,5 @@
+<header> VineBook </header>
+
 <style>
 html {
      background: url("./images/daniel-vogel-NUD6cWNdBv8-unsplash.jpg");
@@ -7,7 +9,7 @@ html {
  ${!!is_logged_in ? `
     
     
-    <h1 class = "welcome">Welcome ${first_name}</h1> 
+    <h1 class = "welcome">Welcome, ${first_name}</h1> 
 
 
 
