--- a/views/partial-masterList.html
+++ b/views/partial-masterList.html
@@ -1,3 +1,8 @@
+<article class="message">
+    <div class="message-body">
+        Add wines to your inventory or pick wines that are similar to what you need for your wine list... 
+    </div>
+</article> 
 
 <table class="table">
         <thead>
