--- a/views/template.html
+++ b/views/template.html
@@ -59,7 +59,7 @@
                     <i class="fab fa-twitter"></i>
                   </span>
         
-                    <span style="text-transform: capitalize;">${first_name}'s Clients</span>
+                    <span style="text-transform: capitalize;">${first_name}'s Accounts</span>
                 ` : `
                 <a class="bd-tw-button button" href="/signup">
                   <span class="icon">
