--- a/views/partial-masterList.html
+++ b/views/partial-masterList.html
@@ -1,4 +1,4 @@
-<article class="message">
+<article class="message info-message">
     <div class="message-body">
         Add wines to your inventory or pick wines that are similar to what you need for your wine list... 
     </div>
