Aleert button added to masterlist

--- a/views/partial-masterList.html
+++ b/views/partial-masterList.html
@@ -39,7 +39,7 @@ ${!!is_logged_in && role == 'rep' ? ` ` : `
                     </td>
                     
                             
-                    <td><input type="submit" value="Add" name="add"></input></td>
+                    <td><input class="add"type="submit" value="Add" name="add"></input></td>
 
                 </form>
                 `}
@@ -47,6 +47,7 @@ ${!!is_logged_in && role == 'rep' ? ` ` : `
         `).join('')}
         </tbody>
     </table>
+    <script src="../scripts/script.js"></script>
 
  
         
