--- a/views/template.html
+++ b/views/template.html
@@ -17,10 +17,12 @@
     <a class="navbar-item" href="/">
       <img src="../images/DugkJmgi5C5SZfr4E9Wt0F6EQ.png" alt="Wine Bottle" width="38" height="28">
     </a>
-    <div class="navbar-burger burger has-dropdown is-hoverable is-active" data-target="navbarExampleTransparentExample">
-      <span></span>
-      <span></span>
-      <span></span>
+    <div class="navbar-burger burger has-dropdown is-hoverable" onclick="document.querySelector('.navbar-menu').classList.toggle('is-active');" data-target="navbarExampleTransparentExample">
+      <div class="burger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </div>
 
