--- a/views/template.html
+++ b/views/template.html
@@ -46,7 +46,7 @@
         <div class="field is-grouped">
           <p class="control">
             ${!!is_logged_in && role == 'buyer' ? `
-            <a class="bd-tw-button button" href="/buyerlist/user_id">
+            <a class="bd-tw-button button" href="/buyerlist/${id}">
               <span class="icon">
                 <i class="fab fa-twitter"></i>
               </span>
