--- a/views/partial-single-userList.html
+++ b/views/partial-single-userList.html
@@ -1,5 +1,5 @@
-<p> Account Name: ${userData.company}</p>
-<p> Account Buyer: ${userData.first_name} ${userData.last_name}</p>
+<p style="text-transform: capitalize;"> Account Name: ${userData.company}</p>
+<p style="text-transform: capitalize;"> Account Buyer: ${userData.first_name} ${userData.last_name}</p>
     
 <h2>INVENTORY</h2>
 <table class="table">
