--- a/views/partial-login.html
+++ b/views/partial-login.html
@@ -11,7 +11,7 @@ html {
     <h1 class = "welcome">Welcome, ${first_name}</h1>
 
     ` : `   
-<form action="/" method="POST">
+<form class="login-form" action="/" method="POST">
     <label>Email Address
         <input type="text" aria-placeholder="Email Address" name="email">
     </label>
